@@ -32,7 +32,8 @@
 # xserver-command = X server command to run
 # xserver-layout = Layout to pass to X server
 # xserver-config = Config file to pass to X server
-# xdmcp-manager = XDMCP manager to connect to
+# xserver-allow-tcp = True if TCP/IP connections are allowed to this X server
+# xdmcp-manager = XDMCP manager to connect to (implies xserver-allow-tcp=true)
 # xdmcp-port = XDMCP UDP/IP port to communicate on
 # xdmcp-key = Authentication key to use for XDM-AUTHENTICATION-1 (stored in keys.conf)
 # greeter-session = Session to load for greeter
@@ -55,6 +56,7 @@
 #xserver-command=X
 #xserver-layout=
 #xserver-config=
+#xserver-allow-tcp=false
 #xdmcp-manager=
 #xdmcp-port=177
 #xdmcp-key=
