@@ -45,6 +45,8 @@ void xserver_local_set_config (XServerLocal *server, const gchar *path);
 
 void xserver_local_set_layout (XServerLocal *server, const gchar *layout);
 
+void xserver_local_set_allow_tcp (XServerLocal *server, gboolean allow_tcp);
+
 void xserver_local_set_xdmcp_server (XServerLocal *server, const gchar *hostname);
 
 const gchar *xserver_local_get_xdmcp_server (XServerLocal *server);
